mondo-commit since MOE is refusing to migrate individual changes.
There's quite a bit of flux in this CL due not just to new features.
Google is now using https://github.com/google/google-java-format
internally to format most of its java sourcebase so that it's easier
for a developer to quickly familiarize and produce fixes for code
outside their main project.  This should be a one-time flux.

Change:	131778022
Description:
	Fix proto3 oneof semantics in Soy to match jspb semantics which are changing (in cl/129271686)

	Due to a bug in jspb, primitive oneof fields that weren't set would return undefined/null even in proto3.  Since this is being fixed in jspb we need to ensure that soysauce does the right thing.

Change:	131859311
Description:
	Rename readme so it will appear properly in CS window.

Change:	132014466
Description:
	Migrate and update some misc Soy docs.

Change:	132069248
Description:
	Make the error for passing a protobuf to a template with untyped params a little less confusing.  'strict' typically refers to autoescaping, but here it was referring to 'strictly typed'

Change:	132074373
Description:
	Sort SoyErrors before reporting them.

	This should ensure that errors are grouped by file and are reported in lexicographic order within each file.

Change:	132133045
Description:
	Add a public target for per-locale compilation users to use.

	soy_js doesn't support generating per-locale outputs and it doesn't make much sense to add support since afaict there are only 4 such users and two of them aren't real applications (tests and/or examples).  So this new public SoyToJsSrcCompiler target is available for them, but controlled by a whitelist.

Change:	132333434
Description:
	Delete the ExprNode.ConstantNode interface.

	There are no subtypes of ConstantNode which aren't also subtypes of PrimtiveNode so there isn't much point in the interface existing.

Change:	132358507
Description:
	Move subcategory messages into their own files.

	This change has two