@@ -26,7 +26,8 @@ import com.google.common.truth.Subject;
 import com.google.common.truth.SubjectFactory;
 import com.google.common.truth.Truth;
 import com.google.template.soy.jbcsrc.shared.Names;
-
+import java.io.PrintWriter;
+import java.io.StringWriter;
 import org.objectweb.asm.ClassReader;
 import org.objectweb.asm.Label;
 import org.objectweb.asm.Opcodes;
@@ -34,33 +35,48 @@ import org.objectweb.asm.Type;
 import org.objectweb.asm.commons.Method;
 import org.objectweb.asm.util.CheckClassAdapter;
 
-import java.io.PrintWriter;
-import java.io.StringWriter;
-
 /**
  * Test-Only utility for testing Expression instances.
- * 
+ *
  * <p>Since {@link Expression expressions} are fully encapsulated we can represent them as simple
- * nullary interface methods.  For each expression we will compile an appropriately typed 
+ * nullary interface methods. For each expression we will compile an appropriately typed
  * implementation of an invoker interface.
  */
 public final class ExpressionTester {
   private interface Invoker {
     void voidInvoke();
   }
-  // These need to be public so that our memory classloader can access them across protection 
+  // These need to be public so that our memory classloader can access them across protection
   // domains
-  public interface IntInvoker extends Invoker { int invoke(); }
-  public interface CharInvoker extends Invoker{ char invoke(); }
-  public interface BooleanInvoker extends Invoker{ boolean invoke(); }
-  public interface FloatInvoker extends Invoker{ float invoke(); }
-  public interface LongInvoker extends Invoker { long invoke(); }
-  public interface DoubleInvoker extends Invoker{ double invoke(); }
-  public interface ObjectInvoker extends Invoker{ Object invoke(); }
-  
-  /**
-   * Returns a truth subject that can be used to assert on an {@link Expression}.
-   */
+  public interface IntInvoker extends Invoker {
+    int invoke();
+  }
+
+  public interface CharInvoker extends Invoker {
+    char invoke();
+  }
+
+  public interface BooleanInvoker extends Invoker {
+    boolean invoke();
+  }
+
+  public interface FloatInvoker extends Invoker {
+    float invoke();
+  }
+
+  public interface LongInvoker extends Invoker {
+    long invoke();
+  }
+
+  public interface DoubleInvoker extends Invoker {
+    double invoke();
+  }
+
+  public interface ObjectInvoker extends Invoker {
+    Object invoke();
+  }
+
+  /** Returns a truth subject that can be used to assert on an {@link Expression}. */
   public static ExpressionSubject assertThatExpression(Expression resp) {
     return Truth.assertAbout(FACTORY).that(resp);
   }
@@ -85,10 +101,10 @@ public final class ExpressionTester {
      * Asserts on the literal code of the expression, use sparingly since it may lead to overly
      * coupled tests.
      */
-    ExpressionSubject hasCode(String ...instructions) {
+    ExpressionSubject hasCode(String... instructions) {
       compile();
       String formatted = Joiner.on('\n').join(instructions);
-      if (!formatted.equals(getSubject().trace().trim())) {
+      if (!formatted.equals(actual().trace().trim())) {
         fail("hasCode", formatted);
       }
       return this;
@@ -98,16 +114,16 @@ public final class ExpressionTester {
      * Asserts on the literal code of the expression, use sparingly since it may lead to overly
      * coupled tests.
      */
-    ExpressionSubject doesNotContainCode(String ...instructions) {
+    ExpressionSubject doesNotContainCode(String... instructions) {
       compile();
       String formatted = Joiner.on('\n').join(instructions);
-      String actual = getSubject().trace().trim();
+      String actual = actual().trace().trim();
       if (actual.contains(formatted)) {
         failWithBadResults("doesNotContainCode", formatted, "evaluates to", actual);
       }
       return this;
     }
-    
+
     ExpressionSubject evaluatesTo(boolean expected) {
       compile();
       boolean actual;
@@ -182,7 +198,7 @@ public final class ExpressionTester {
       }
       return this;
     }
-    
+
     ExpressionSubject evaluatesToInstanceOf(Class<?> expected) {
       compile();
       Object actual;
@@ -197,7 +213,7 @@ public final class ExpressionTester {
       }
       return this;
     }
-    
+
     ExpressionSubject throwsException(Class<? extends Throwable> clazz) {
       return throwsException(clazz, null);
     }
@@ -216,17 +232,17 @@ public final class ExpressionTester {
         return this;
       }
       fail("throws an exception");
-      return this;  // dead code, but the compiler can't prove it
+      return this; // dead code, but the compiler can't prove it
     }
 
     private void compile() {
       if (invoker == null) {
         try {
-          Class<? extends Invoker> invokerClass = invokerForType(getSubject().resultType());
-          this.compiledClass = createClass(invokerClass, getSubject());
+          Class<? extends Invoker> invokerClass = invokerForType(actual().resultType());
+          this.compiledClass = createClass(invokerClass, actual());
           this.invoker = load(invokerClass, compiledClass);
         } catch (Throwable t) {
-          throw new RuntimeException("Compilation of" + getDisplaySubject() + " failed", t);
+          throw new RuntimeException("Compilation of" + actualAsString() + " failed", t);
         }
       }
     }
@@ -234,15 +250,19 @@ public final class ExpressionTester {
 
   private static final SubjectFactory<ExpressionSubject, Expression> FACTORY =
       new SubjectFactory<ExpressionSubject, Expression>() {
-        @Override public ExpressionSubject getSubject(FailureStrategy fs, Expression that) {
+        @Override
+        public ExpressionSubject getSubject(FailureStrategy fs, Expression that) {
           return new ExpressionSubject(fs, that);
         }
       };
 
   static <T> T createInvoker(Class<T> clazz, Expression expr) {
     Class<? extends Invoker> expected = invokerForType(expr.resultType());
-    checkArgument(clazz.equals(expected), 
-        "%s isn't an appropriate invoker type for %s, expected %s", clazz, expr.resultType(), 
+    checkArgument(
+        clazz.equals(expected),
+        "%s isn't an appropriate invoker type for %s, expected %s",
+        clazz,
+        expr.resultType(),
         expected);
     ClassData data = createClass(clazz.asSubclass(Invoker.class), expr);
     return load(clazz, data);
@@ -257,8 +277,8 @@ public final class ExpressionTester {
       throw new RuntimeException(e);
     }
     try {
-      return generatedClass.asSubclass(clazz).newInstance();
-    } catch (InstantiationException | IllegalAccessException e) {
+      return generatedClass.asSubclass(clazz).getConstructor().newInstance();
+    } catch (ReflectiveOperationException e) {
       throw new RuntimeException(e);
     }
   }
@@ -273,8 +293,8 @@ public final class ExpressionTester {
     Class<?> returnType = invokeMethod.getReturnType();
     if (!Type.getType(returnType).equals(expr.resultType())) {
       if (!returnType.equals(Object.class) || expr.resultType().getSort() != Type.OBJECT) {
-        throw new IllegalArgumentException(targetInterface 
-            + " is not appropriate for this expression");
+        throw new IllegalArgumentException(
+            targetInterface + " is not appropriate for this expression");
       }
     }
     TypeInfo generatedType =
@@ -292,7 +312,7 @@ public final class ExpressionTester {
     try {
       voidInvoke = Method.getMethod(Invoker.class.getMethod("voidInvoke"));
     } catch (NoSuchMethodException | SecurityException e) {
-      throw new RuntimeException(e);  // this method definitely exists
+      throw new RuntimeException(e); // this method definitely exists
     }
     Statement.concat(
             LocalVariable.createThisVar(generatedType, new Label(), new Label())
@@ -311,15 +331,15 @@ public final class ExpressionTester {
   }
 
   /**
-   * Utility to run the {@link CheckClassAdapter} on the class and print it to a string. for 
+   * Utility to run the {@link CheckClassAdapter} on the class and print it to a string. for
    * debugging.
    */
   private static void checkClassData(ClassData clazz) {
     StringWriter sw = new StringWriter();
     CheckClassAdapter.verify(
-        new ClassReader(clazz.data()), 
-        ExpressionTester.class.getClassLoader(), 
-        false, 
+        new ClassReader(clazz.data()),
+        ExpressionTester.class.getClassLoader(),
+        false,
         new PrintWriter(sw));
     String result = sw.toString();
     if (!result.isEmpty()) {
